# caffe

./: README.md  comp.sh
demo/: CMakeLists.txt  comp.sh  demo.cl  demo.cpp  main  platform.cpp  platform.h
helloworld/: CMakeLists.txt  comp.sh  helloworld.cl  helloworld.cpp  main  platform.cpp  platform.h  tool.cpp  tool.h
src/: main.c
